// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should generate mock data functions 1`] = `
"
export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides
    };
};

export const aUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        login: 'libero',
        avatar: anAvatar(),
        ...overrides
    };
};
"
`;

exports[`should generate mock data functions with external types file import 1`] = `
"/* eslint-disable @typescript-eslint/no-use-before-define,@typescript-eslint/no-unused-vars */
import { Avatar, UpdateUserInput, User } from './types/graphql';

export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides
    };
};

export const aUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        login: 'libero',
        avatar: anAvatar(),
        ...overrides
    };
};
"
`;
